# FlowJitsu

./: .gitignore  README.md  build_macos_app.sh  build_release_assets.sh  build_wheel.sh  install_flow_gate_app.sh  install_flow_gate_wheel.sh  manual.md  pyproject.toml  update_macos_app.sh
.github/workflows/: release.yml
src/FlowCytometryTools/core/: bases.py  containers.py  utils.py
src/flow_gate_app/: __init__.py  __main__.py  _app_version.py  analysis_views.py  flow_desktop_ui.py  flow_desktop_ui_qt.py  helpers.py  plate_views.py
src/flow_gate_app/v2/: __init__.py  analysis_dialog.py  app.py  compensation_dialog.py  data_runtime.py  export_tools.py  interaction_tools.py  management_tools.py  models.py  plate_editor.py  plot_tools.py  services.py  session_runtime.py  state.py  ui_layout.py  update_service.py  window.py  window_glue.py
