[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-gate-app"
version = "0.1.16"
description = "Desktop flow cytometry gating and plate annotation app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scipy",
  "fcsparser",
  "six",
  "decorator",
  "PySide6",
  "tkinterdnd2",
]

[project.scripts]
flow-gate-desktop = "flow_gate_app.v2:launch_desktop_app_v2"
flow-gate-desktop-tk = "flow_gate_app.flow_desktop_ui:launch_desktop_app"
flow-gate-desktop-qt = "flow_gate_app.v2:launch_desktop_app_v2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
